@@ -1,106 +1,79 @@
 # VideoGrab
 
-A single-file Python/Flask web application for downloading videos from any website. Uses [yt-dlp](https://github.com/yt-dlp/yt-dlp) as the download engine with a modern browser-based UI and real-time progress via Server-Sent Events.
+VideoGrab is a Java Swing desktop application for downloading videos with yt-dlp.
 
 ## Features
 
-- **Universal support** — YouTube, TikTok, Vimeo, Twitch, Bilibili, and 1000+ more sites
-- **Quality selection** — Best, 1080p, 720p, 480p, or audio-only (MP3)
-- **Batch downloads** — Paste multiple URLs and download them all at once
-- **Playlist support** — Download full playlists with a single toggle
-- **Subtitle download** — Download and embed subtitles in 10+ languages
-- **Output formats** — MP4, MKV, or WebM
-- **Speed limiting** — Throttle downloads to 500K/1M/2M/5M
-- **Proxy support** — Route downloads through a proxy
-- **Browser cookies** — Use cookies from Chrome, Firefox, Edge, and more
-- **Download history** — Search, filter, and export your download history
-- **Dark/Light theme** — Toggle between themes, saved to localStorage
-- **Desktop notifications** — Get notified when downloads complete
-- **Drag & drop** — Drag URLs directly onto the page
-- **Keyboard shortcuts** — Ctrl+Enter to download, Esc to close panels
-- **Graceful shutdown** — Active downloads are cleaned up on exit
+- Universal site support through yt-dlp
+- Queue-based downloads with configurable max concurrency
+- Format/quality options, playlist toggle, subtitles, proxy, speed limit, cookies
+- Download cards with progress, speed, size, ETA, cancel and retry
+- Download history with search, clear, export, and live refresh
+- Light/dark theme switching (persisted)
+- Drag and drop URL input, global paste, and keyboard shortcuts
+- Startup/runtime diagnostics for python, yt-dlp, and ffmpeg
+- System tray support and graceful shutdown cleanup
 
 ## Requirements
 
-- Python 3.8+
-- [yt-dlp](https://github.com/yt-dlp/yt-dlp) (installed automatically via pip)
-- [ffmpeg](https://ffmpeg.org/) (required for merging video/audio and format conversion)
+- Java 21+
+- Maven 3.8+
+- python on PATH
+- yt-dlp on PATH
+- ffmpeg on PATH
 
-## Installation
+You can also bundle tools locally (no global PATH required):
 
-```bash
-# Clone the repository
-git clone https://github.com/youruser/videograb.git
-cd videograb
+- `tools/yt-dlp.exe` (or `tools/yt-dlp` on Linux/macOS)
+- `tools/ffmpeg/bin/ffmpeg.exe` (or `tools/ffmpeg/bin/ffmpeg` on Linux/macOS)
 
-# Install dependencies
-pip install -r requirements.txt
-
-# Make sure ffmpeg is installed and on PATH
-# Windows: download from https://ffmpeg.org/download.html
-# macOS: brew install ffmpeg
-# Linux: sudo apt install ffmpeg
-```
-
-## Usage
+## Build
 
 ```bash
-# Run with defaults (port 8457, max 3 concurrent downloads)
-python downloader.py
-
-# Custom port and concurrency
-python downloader.py --port 9000 --max-concurrent 5
+mvn -q -DskipTests compile
 ```
 
-The app will open in your browser at `http://localhost:8457`.
+## Run
 
-### Windows
+```bash
+mvn -q exec:java -Dexec.mainClass=com.videograb.Main
+```
 
-Double-click `start.bat` — it auto-installs dependencies and launches the app.
+Or package and run the JAR:
 
-## CLI Arguments
-
-| Argument | Default | Description |
-|----------|---------|-------------|
-| `--port` | 8457 | Port to run the web server on |
-| `--max-concurrent` | 3 | Maximum simultaneous downloads |
+```bash
+mvn -q -DskipTests package
+java -jar target/videograb-1.0.0.jar
+```
 
 ## Keyboard Shortcuts
 
 | Shortcut | Action |
 |----------|--------|
-| `Ctrl+Enter` | Start download |
-| `Ctrl+Shift+H` | Toggle history panel |
-| `Escape` | Close open panels |
-| `Ctrl+V` (anywhere) | Paste URL into input |
+| Ctrl+Enter | Start download |
+| Ctrl+Shift+H | Open History tab |
+| Escape | Focus URL field |
+| Ctrl+V | Paste URL into input |
 
 ## Project Structure
 
-```
+```text
 videograb/
-├── downloader.py          # Flask backend + yt-dlp wrapper (single file)
-├── static/
-│   ├── index.html         # Web UI
-│   ├── app.js             # Frontend logic (SSE, toasts, theme)
-│   └── style.css          # Dark/Light theme styling
-├── requirements.txt       # Python dependencies
-├── start.bat              # Windows launcher
-├── CLAUDE.md              # Development notes
-└── README.md              # This file
+├── src/main/java/com/videograb/
+│   ├── Main.java
+│   ├── model/
+│   ├── service/
+│   ├── ui/
+│   └── util/
+├── pom.xml
+└── README.md
 ```
 
-## API Endpoints
+## Notes
 
-| Route | Method | Purpose |
-|-------|--------|---------|
-| `/` | GET | Web UI |
-| `/api/info` | GET | App version, save path, tool availability |
-| `/api/download` | POST | Start download(s) |
-| `/api/progress/<id>` | GET | SSE stream of download events |
-| `/api/cancel` | POST | Cancel a running download |
-| `/api/browse` | POST | Open native folder picker |
-| `/api/open-folder` | POST | Open folder in OS file explorer |
-| `/api/history` | GET | Download history (last 100) |
+- Runtime user state is stored in config.json and history.json.
+- On very new JDKs (e.g., 24+), VideoGrab disables FlatLaf optional native helpers by default for compatibility.
+- If you want FlatLaf native integration enabled, run with: `--enable-native-access=ALL-UNNAMED`.
 
 ## License
 
